fix scroll on mobile when menu is open

--- a/src/components/mobileMenuHeader/MobileMenuHeader.module.scss
+++ b/src/components/mobileMenuHeader/MobileMenuHeader.module.scss
@@ -1,6 +1,8 @@
 @use '@/style/variables' as *;
 @use '@/style/mixins/components' as *;
-
+body:has(.mobileMenu) {
+  overflow: hidden;
+}
 .mobileMenu {
   position: fixed;
   top: -100%;
